fixed spacing and qrbuildup

--- a/public/styles/create.css
+++ b/public/styles/create.css
@@ -40,7 +40,7 @@ textarea{
   }
 
 .center{
-    width: 40%;
+    width: 700px;
     margin:auto;
     margin-top:2em;
     min-width:700px;
